# Synthetic-Dataset-Generation-Suite

./: .env.example  .gitignore  README.md  pyproject.toml
configs/providers/: anthropic.yaml  gemini.yaml  ollama.yaml  openai.yaml  perplexity.yaml
configs/tasks/: example_task.yaml  paper_qa.yaml  quantum_reasoning.yaml
sdgs/: __init__.py  cli.py  extract.py  filter.py  generate.py  providers.py  qa.py  scrape.py  tracker.py  validate.py
sdgs/web/: __init__.py  app.py  auth.py  config.py  deps.py  schemas.py
sdgs/web/db/: __init__.py  database.py  models.py
sdgs/web/engine/: __init__.py  correction_agent.py  evaluator.py  merge_convert.py  push_hf.py  trainer.py  training_service.py
sdgs/web/engine/configs/datasets/: biology.yaml  chemistry.yaml  materials-science.yaml  math.yaml  medmcqa.yaml  physics.yaml  quantum-reasoning.yaml  quantum.yaml  sciq.yaml
sdgs/web/engine/configs/models/: qwen2.5-14b-instruct.yaml  qwen2.5-32b-instruct.yaml  qwen2.5-7b-instruct.yaml  qwen3-14b.yaml  qwen3-32b.yaml  qwen3-4b.yaml  qwen3-8b.yaml
sdgs/web/engine/configs/training/: default.yaml  quick_test.yaml
sdgs/web/engine/scripts/: filter_dataset.py  qa_dataset.py
sdgs/web/frontend/: index.html  package-lock.json  package.json  vite.config.ts
sdgs/web/frontend/src/: App.tsx
sdgs/web/frontend/src/api/: client.ts  sse.ts
sdgs/web/frontend/src/hooks/: useGalaxyGraph.ts  useSSE.ts  useTrainingSSE.ts
sdgs/web/routers/: __init__.py  auth.py  datasets.py  galaxy.py  papers.py  providers.py  pulse.py  settings.py  sse.py  training.py
sdgs/web/services/: __init__.py  broadcast.py  dataset_service.py  galaxy_service.py  hf_service.py  job_runner.py  qa_service.py
(+31 files in other folders)
